{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 45,
  "lineage": "6b8b4753-4ee7-f25e-b354-3fe9cc86c0b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "andrew_dev_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e444924a2233b07",
            "arn": "arn:aws:ec2:eu-central-1:891377001927:instance/i-08b8031bd8e939282",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b8031bd8e939282",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "andrewkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cb3bbde7d174ce36",
            "private_dns": "ip-10-123-1-212.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.1.212",
            "public_dns": "ec2-18-195-221-255.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.221.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e19974df02a6c9bb",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08415c2f3a6c16396",
            "tags": {
              "Name": "andrew-dev-node"
            },
            "tags_all": {
              "Name": "andrew-dev-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08881debc4ccdd31d"
            ]
          },
          "dependencies": [
            "aws_key_pair.andrew_auth",
            "aws_security_group.andrew_sg",
            "aws_subnet.andrew_public_subnet",
            "aws_vpc.andrews_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "andrew_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891377001927:internet-gateway/igw-025782305b9b90584",
            "id": "igw-025782305b9b90584",
            "owner_id": "891377001927",
            "tags": {
              "Name": "andrews_igw"
            },
            "tags_all": {
              "Name": "andrews_igw"
            },
            "vpc_id": "vpc-0104d2fd6167aeba2"
          },
          "dependencies": [
            "aws_vpc.andrews_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-025782305b9b90584",
            "id": "r-rtb-07c046f26d1a7255a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c046f26d1a7255a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.andrew_internet_gateway",
            "aws_route_table.andrew_public_rt",
            "aws_vpc.andrews_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "andrew_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891377001927:route-table/rtb-07c046f26d1a7255a",
            "id": "rtb-07c046f26d1a7255a",
            "owner_id": "891377001927",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025782305b9b90584",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "andrews_public_rt"
            },
            "tags_all": {
              "Name": "andrews_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104d2fd6167aeba2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.andrews_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "andrew_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061e01339c10c30e2",
            "route_table_id": "rtb-07c046f26d1a7255a",
            "subnet_id": "subnet-08415c2f3a6c16396"
          },
          "dependencies": [
            "aws_route_table.andrew_public_rt",
            "aws_subnet.andrew_public_subnet",
            "aws_vpc.andrews_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "andrew_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891377001927:security-group/sg-08881debc4ccdd31d",
            "description": "andrews security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08881debc4ccdd31d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "andrews_sg",
            "name_prefix": "",
            "owner_id": "891377001927",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0104d2fd6167aeba2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.andrews_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "andrew_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891377001927:subnet/subnet-08415c2f3a6c16396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08415c2f3a6c16396",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377001927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "andrews_public"
            },
            "tags_all": {
              "Name": "andrews_public"
            },
            "vpc_id": "vpc-0104d2fd6167aeba2"
          },
          "dependencies": [
            "aws_vpc.andrews_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "andrews_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891377001927:vpc/vpc-0104d2fd6167aeba2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-076cbc6ed3165a6c8",
            "default_route_table_id": "rtb-0fce0c72bf7fd076a",
            "default_security_group_id": "sg-076f6d478ef2bbe5a",
            "dhcp_options_id": "dopt-078092185c168a87f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0104d2fd6167aeba2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fce0c72bf7fd076a",
            "owner_id": "891377001927",
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            }
          }
        }
      ]
    }
  ]
}